emc2 (1:2.2.9~cvs) hardy; urgency=low

  * Add Sherline lathe, 3- and 4-axis mill configurations from Heinz Reimer
  * Fix several problems with CSS mode with reversed (M4) spindle, 
    including bug #2467781

 -- Chris Radek <chris@timeguy.com>  Fri, 26 Dec 2008 22:24:04 -0600

emc2 (1:2.2.8) hardy; urgency=low

  * Documentation improvements
  * Fix rare incorrect movement for G2 and G3 arc moves
  * partial swedish translation now under correct 'sv' language.
  * hostmot2 improvements: encoder velocity and index mask.  stepgen step
    types and bugfixes.  better logging.  improved device firmwares.

 -- Jeff Epler <jepler@unpythonic.net>  Tue, 11 Nov 2008 20:48:20 -0600

emc2 (1:2.2.7) hardy; urgency=low

  * pop up a message when the right kernel isn't running
  * halcmd will now show an error message instead of segfaulting when
    inadequate locked memory is available
  * allow emc2-sim to be built on 8.04
  * stepconf: fix "negative SCALE" problem reported by Christopher Purcell
  * comp: fix bad C code generated from variable array declarations such as
    'variable double output[8];'
  * documentation improvments
  * axis: "touch off" of rotary axis on metric machine
  * hostmot2: Support all the PCI, PC/104-Plus, and EPP "Anything I/O"
    boards: 5i20, 5i22, 5i23, 4i65, 4i68, and 7i43.  PCI users should
    switch from hm2_5i20 to hm2_pci driver.
  * hostmot2 changes: Config changes required!  pwmgen.scale now works as
    advertised; stepgen timing params are "u32 ns" instead of "float
    seconds"; and stepgens now have a .enable pin which needs setting.
  * hostmot2 feature additions: Added PDM mode for pwmgen; PWM and PDM
    frequency are now settable by the user; implemented stepgen maxaccel
    and maxvel; support open-drain GPIOs; all GPIOs now have some
    representation in HAL (though the ones used by module instances are
    restricted); encoder improvements.
  * Lots of hostmot2 bug fixes, mostly with pwmgen and stepgen.  Thanks to