@@ -1,10 +1,11 @@
 emc2 (1:2.2.9~cvs) hardy; urgency=low
 
   * Add Sherline lathe, 3- and 4-axis mill configurations from Heinz Reimer
-  * Fix several problems with CSS mode with reversed (M4) spindle, 
+  * Fix several problems with CSS mode with reversed (M4) spindle,
     including bug #2467781
+  * More error messages are translatable
 
- -- Chris Radek <chris@timeguy.com>  Fri, 26 Dec 2008 22:24:04 -0600
+ -- Jeff Epler <jepler@unpythonic.net>  Tue, 13 Jan 2009 19:13:30 -0600
 
 emc2 (1:2.2.8) hardy; urgency=low
 
